--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Medium Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-MediumOblique.eot');
     src: local('Greycliff CF Medium Oblique'), local('GreycliffCF-MediumOblique'),
         url('GreycliffCF-MediumOblique.eot?#iefix') format('embedded-opentype'),
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Extra Light Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-ExtraLightOblique.eot');
     src: local('Greycliff CF Extra Light Oblique'), local('GreycliffCF-ExtraLightOblique'),
         url('GreycliffCF-ExtraLightOblique.eot?#iefix') format('embedded-opentype'),
@@ -59,7 +59,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Extra Bold Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-ExtraBoldOblique.eot');
     src: local('Greycliff CF Extra Bold Oblique'), local('GreycliffCF-ExtraBoldOblique'),
         url('GreycliffCF-ExtraBoldOblique.eot?#iefix') format('embedded-opentype'),
@@ -71,7 +71,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Extra';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-ExtraLight.eot');
     src: local('Greycliff CF Extra Light'), local('GreycliffCF-ExtraLight'),
         url('GreycliffCF-ExtraLight.eot?#iefix') format('embedded-opentype'),
@@ -83,7 +83,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Extra';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-ExtraBold.eot');
     src: local('Greycliff CF Extra Bold'), local('GreycliffCF-ExtraBold'),
         url('GreycliffCF-ExtraBold.eot?#iefix') format('embedded-opentype'),
@@ -95,7 +95,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Bold Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-BoldOblique.eot');
     src: local('Greycliff CF Bold Oblique'), local('GreycliffCF-BoldOblique'),
         url('GreycliffCF-BoldOblique.eot?#iefix') format('embedded-opentype'),
@@ -107,7 +107,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Light Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-LightOblique.eot');
     src: local('Greycliff CF Light Oblique'), local('GreycliffCF-LightOblique'),
         url('GreycliffCF-LightOblique.eot?#iefix') format('embedded-opentype'),
@@ -119,7 +119,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Heavy Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-HeavyOblique.eot');
     src: local('Greycliff CF Heavy Oblique'), local('GreycliffCF-HeavyOblique'),
         url('GreycliffCF-HeavyOblique.eot?#iefix') format('embedded-opentype'),
@@ -131,7 +131,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Demi Bold Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-DemiBoldOblique.eot');
     src: local('Greycliff CF Demi Bold Oblique'), local('GreycliffCF-DemiBoldOblique'),
         url('GreycliffCF-DemiBoldOblique.eot?#iefix') format('embedded-opentype'),
@@ -143,7 +143,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF DemiBold';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-DemiBold.eot');
     src: local('Greycliff CF Demi Bold'), local('GreycliffCF-DemiBold'),
         url('GreycliffCF-DemiBold.eot?#iefix') format('embedded-opentype'),
@@ -179,7 +179,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Thin Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-ThinOblique.eot');
     src: local('Greycliff CF Thin Oblique'), local('GreycliffCF-ThinOblique'),
         url('GreycliffCF-ThinOblique.eot?#iefix') format('embedded-opentype'),
@@ -203,7 +203,7 @@
 }
 
 @font-face {
-    font-family: 'Greycliff CF Oblique';
+    font-family: 'Greycliff CF';
     src: url('GreycliffCF-RegularOblique.eot');
     src: local('Greycliff CF Oblique'), local('GreycliffCF-RegularOblique'),
         url('GreycliffCF-RegularOblique.eot?#iefix') format('embedded-opentype'),
