--- a/styles-lg.css
+++ b/styles-lg.css
@@ -3,6 +3,9 @@
     padding-left: 22px;
     padding-right: 22px;
   }
+  .scroll-section {
+    background: linear-gradient(to bottom, #dbf7f2 0%, #f4f2eb 3%);
+  }
   header > section > nav {
     display: none;
   }
@@ -214,11 +217,6 @@
   }
   .ws-iconbox {
     max-width: 100%;
-  }
-  .ws-iconbox:nth-child(3) {
-    max-width: 100%;
-  }
-  .ws-iconbox {
     cursor: pointer;
   }
 
@@ -237,6 +235,9 @@
     color: white;
     font-weight: 500;
     font-size: 20px;
+  }
+  .workshop-details {
+    background: #dbf7f2;
   }
   .workshop-include-section {
     padding: 20px 19px 24px 19px;
@@ -268,7 +269,7 @@
   .modal-content > h2 {
     font-size: 18px;
     font-weight: 500;
-    color: #4A4A4A;
+    color: #4a4a4a;
   }
   #scholarshipForm {
     gap: 10px;
