--- a/styles-md.css
+++ b/styles-md.css
@@ -9,7 +9,7 @@
   }
   .ws-iconbox:nth-child(3) {
     max-width: 100%;
-    height: 110px;
+    /* height: 90px; */
   }
   .flip-card-front,
   .flip-card-back {
@@ -28,10 +28,10 @@
   .ws-iconbox-text h4 {
     text-align: left;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 2px;
   }
-  .image-box > img {
+  .image-box > picture {
     margin-top: 6px;
     width: 20px;
     height: 20px;
