--- a/styles-lg.css
+++ b/styles-lg.css
@@ -244,6 +244,9 @@
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
+  .workshop-included-br{
+    display: block;
+  }
   .benefits {
     padding: 0px;
     background-color: transparent;
