--- a/styles-md.css
+++ b/styles-md.css
@@ -99,24 +99,34 @@
   }
   .habit-item {
     width: 100%;
+    height: 100%;
     max-width: 100%;
+    max-height: 102px;
     display: flex;
+    flex-direction: row;
+    gap: 5px;
+    justify-content: start;
     padding: 10px;
     align-items: center;
   }
+  .habit-gif{
+    width: 86px;
+    height: 86px;
+  }
   .habit-heading {
     text-align: left;
-    font-size: 17px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
     margin-bottom: 5px;
   }
   .habit-text {
     text-align: left;
     padding: 0;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 19px;
   }
   .habit-seven {
+    height: 102px;
     background: rgba(191, 229, 221, 0.2);
     padding: 10px 10px 10px 0;
   }
