--- a/styles-lg.css
+++ b/styles-lg.css
@@ -278,14 +278,16 @@
     gap: 10px;
   }
   .taTabs__nav {
-    font-weight: 500;
+    font-weight: 600;
     font-size: 16px;
   }
   .pr-info-title,
   .pr-info-details {
     font-size: 14px;
   }
-
+.whats-say-heading{
+  margin-bottom: 0px;
+}
   .day {
     font-size: 16px;
   }
