--- a/styles-sm.css
+++ b/styles-sm.css
@@ -1,6 +1,4 @@
 @media screen and (max-width: 640px) {
-
-  
   .logo {
     margin-left: -16px;
     margin-top: -12px;
@@ -12,20 +10,20 @@
     max-width: 122.609px;
     height: 30px;
   }
-  .workshop-include-main{
+  .workshop-include-main {
     margin-top: 9rem;
     display: flex;
     flex-direction: column;
     gap: 9rem;
   }
-  .workshop-include-section{
+  .workshop-include-section {
     position: relative;
   }
 
-  .workshop-include-section > div{
+  .workshop-include-section > div {
     padding-top: 58px;
   }
-  .workshop-include-section-image-parent{
+  .workshop-include-section-image-parent {
     max-width: 246px;
     position: absolute;
     top: -8rem;
@@ -46,7 +44,19 @@
   .counter-card p {
     font-size: 12px;
   }
-  .modal-content{
+  .modal-content {
     max-width: 90%;
+  }
+  .benefits-subheading {
+    margin-top: 0px;
+}
+  .testimonial-div {
+    padding-top: 0px !important;
+  }
+  .testimonial-heading {
+    display: none;
+  }
+  .testimonial-heading-mobile {
+    display: block;
   }
 }
