--- a/styles-lg.css
+++ b/styles-lg.css
@@ -186,7 +186,7 @@
     margin-bottom: 36px;
     position: relative;
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     /* width: calc(100vw - 40px);
     height: 231px; */
     border-radius: 13px;
@@ -244,7 +244,7 @@
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
-  .workshop-included-br{
+  .workshop-included-br {
     display: block;
   }
   .benefits {
@@ -285,9 +285,9 @@
   .pr-info-details {
     font-size: 14px;
   }
-.whats-say-heading{
-  margin-bottom: 0px;
-}
+  .whats-say-heading {
+    margin-bottom: 0px;
+  }
   .day {
     font-size: 16px;
   }
