fixed divider line

--- a/styles.css
+++ b/styles.css
@@ -835,8 +835,8 @@ header > section > nav > ul > li:hover,
 }
 
 .divider {
-  background-color: #c8c8c8;
-  /* border-top: 1px solid #c8c8c8; */
+  /* background-color: #c8c8c8; */
+  border-top: 1px solid #c8c8c8;
 }
 
 .whats-include-heading {
