--- a/styles.css
+++ b/styles.css
@@ -2206,8 +2206,8 @@ picture:hover img {
 .form-select select {
   width: 100%;
   height: 42px;
-  /* padding: 5px 15px;
-  padding-left: 0.5rem; */
+  padding: 5px 15px;
+  padding-left: 0.5rem;
 }
 
 .form-select option {
