--- a/styles.css
+++ b/styles.css
@@ -2204,22 +2204,10 @@ picture:hover img {
   align-items: center;
 }
 .form-select select {
-  /* width: 100%;
-  height: 42px;
-  padding: 5px 15px;
-  padding-left: 0.5rem; */
-  overflow: hidden;
-  margin-top: 5px;
   width: 100%;
   height: 42px;
-  padding: 10.5px 0px 11.5px 18px;
-  align-items: center;
-  border-radius: 12px;
-  background: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(43, 43, 43, 0.08);
-  &::placeholder {
-    color: #a3a3a3;
-  }
+  padding: 5px 15px;
+  padding-left: 0.5rem;
 }
 
 .form-select option {
