header is sticky

--- a/styles.css
+++ b/styles.css
@@ -341,6 +341,9 @@ header {
   height: 73.5px;
   flex-shrink: 0;
   background: #618780;
+  position: sticky;
+  top: 0px;
+  z-index: 10;
 }
 
 header > section {
