--- a/styles-md.css
+++ b/styles-md.css
@@ -109,7 +109,7 @@
     padding: 10px;
     align-items: center;
   }
-  .habit-gif{
+  .habit-gif, .habit-seven-img{
     width: 86px;
     height: 86px;
   }
