--- a/styles-lg.css
+++ b/styles-lg.css
@@ -186,9 +186,9 @@
     margin-bottom: 36px;
     position: relative;
     width: 100%;
-    height: 100%;
-    /* width: calc(100vw - 40px);
-    height: 231px; */
+    /* height: 100%; */
+    /* width: calc(100vw - 40px); */
+    /* height: 231px; */
     border-radius: 13px;
     overflow: hidden;
   }
