--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -24,8 +24,12 @@
     overflow: hidden;
     /* margin: 0 10px; */
   }
+  .ty-container {
+    padding-top: 1.5rem;
+  }
   .hero-section-ty {
-    min-height: 248px;
+    margin-bottom: 0.5rem;
+    min-height: 255px;
     background-image: url("./images/thank-you/hero-bg-sm.png");
   }
   .ty-session-counter {
@@ -38,9 +42,7 @@
     margin-top: 0px;
   }
 
- 
   .whats-say-subheading {
     font-size: 16px;
   }
- 
 }
