--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,6 @@ select {
 }
 
 select {
-  
   border-right: 8px solid transparent;
 }
 
@@ -419,7 +418,7 @@ header > section > nav > ul > li:hover,
 }
 
 .text-section {
-  margin-top: -2rem;
+  margin-top: 1rem;
 }
 
 .hero-section-ty {
@@ -449,16 +448,16 @@ header > section > nav > ul > li:hover,
 }
 .hero-section-ty > main > div > div > span {
   color: #49887b;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
-  line-height: 21px; /* 150% */
+  line-height: 21px;
 }
 .hero-clip-path {
   clip-path: ellipse(105% 50% at 52% 42%);
 }
-.hero-clip-path-ty {
-  clip-path: ellipse(105% 50% at 52% 42%);
-}
+/* .hero-clip-path-ty {
+  clip-path: ellipse(70% 50% at 52% 42%);
+} */
 
 .hero-content {
   display: flex;
@@ -1229,6 +1228,10 @@ picture:hover img {
   border-radius: 10px;
   transition: all 0.3s ease-in;
   margin-bottom: 20px;
+  margin-top: 45px;
+}
+.testimonial-main{
+  margin-top: 45px;
 }
 .testimonial-heading {
   display: block;
@@ -1475,6 +1478,7 @@ picture:hover img {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 50;
 }
 
 /* When modal is open, make it visible */
@@ -1515,6 +1519,8 @@ picture:hover img {
 }
 
 .modal-content > h2 {
+  font-size: 18px;
+  color: #4A4A4A;
   margin-bottom: 15px;
 }
 
@@ -1533,7 +1539,7 @@ picture:hover img {
 .scholarshipFormLabel {
   color: #666;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .scholarshipFormInput {
@@ -2290,7 +2296,8 @@ picture:hover img {
 
 .register-form select {
   appearance: none;
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill='none'%3E%3Cpath d='M7.22687 9.41459C7.1339 9.5071 7.06014 9.61699 7.00982 9.73796C6.9595 9.85894 6.93359 9.98862 6.93359 10.1196C6.93359 10.2506 6.9595 10.3802 7.00982 10.5012C7.06014 10.6222 7.1339 10.7321 7.22687 10.8246L11.8298 15.4146C11.9226 15.5073 12.0328 15.5808 12.1541 15.631C12.2755 15.6812 12.4055 15.707 12.5368 15.707C12.6682 15.707 12.7982 15.6812 12.9195 15.631C13.0409 15.5808 13.1511 15.5073 13.2438 15.4146L17.8468 10.8246C17.9397 10.732 18.0133 10.6221 18.0636 10.5011C18.1138 10.3802 18.1397 10.2505 18.1397 10.1196C18.1397 9.98866 18.1138 9.85901 18.0636 9.73804C18.0133 9.61708 17.9397 9.50717 17.8468 9.41459C17.754 9.322 17.6438 9.24857 17.5225 9.19846C17.4011 9.14836 17.2711 9.12257 17.1398 9.12257C17.0085 9.12257 16.8785 9.14836 16.7572 9.19846C16.6359 9.24857 16.5257 9.322 16.4328 9.41459L12.5318 13.2946L8.64085 9.41459C8.24975 9.02459 7.60794 9.03459 7.22687 9.41459Z' fill='white'/%3E%3C/svg%3E") no-repeat right;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 25 25' fill='none'%3E%3Cpath d='M7.22687 9.41459C7.1339 9.5071 7.06014 9.61699 7.00982 9.73796C6.9595 9.85894 6.93359 9.98862 6.93359 10.1196C6.93359 10.2506 6.9595 10.3802 7.00982 10.5012C7.06014 10.6222 7.1339 10.7321 7.22687 10.8246L11.8298 15.4146C11.9226 15.5073 12.0328 15.5808 12.1541 15.631C12.2755 15.6812 12.4055 15.707 12.5368 15.707C12.6682 15.707 12.7982 15.6812 12.9195 15.631C13.0409 15.5808 13.1511 15.5073 13.2438 15.4146L17.8468 10.8246C17.9397 10.732 18.0133 10.6221 18.0636 10.5011C18.1138 10.3802 18.1397 10.2505 18.1397 10.1196C18.1397 9.98866 18.1138 9.85901 18.0636 9.73804C18.0133 9.61708 17.9397 9.50717 17.8468 9.41459C17.754 9.322 17.6438 9.24857 17.5225 9.19846C17.4011 9.14836 17.2711 9.12257 17.1398 9.12257C17.0085 9.12257 16.8785 9.14836 16.7572 9.19846C16.6359 9.24857 16.5257 9.322 16.4328 9.41459L12.5318 13.2946L8.64085 9.41459C8.24975 9.02459 7.60794 9.03459 7.22687 9.41459Z' fill='white'/%3E%3C/svg%3E")
+    no-repeat right;
 }
 
 .register-form-bottom {
