--- a/styles-lg.css
+++ b/styles-lg.css
@@ -24,9 +24,14 @@
     background-color: #f2e3c4;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 11px 24px;
     border-radius: 12px 12px 0px 0px;
     transition: all 0.3s ease-in-out;
+  }
+
+  .uhc-mobile-text{
+    max-width: 210px;
   }
 
   .uhc-mobile-text h5 {
@@ -42,6 +47,7 @@
   }
   .uhc-mobile-button {
     width: 100%;
+    height: 36px;
     max-width: 100px;
     font-weight: 700;
     font-size: 13px;
