--- a/styles-xsm.css
+++ b/styles-xsm.css
@@ -46,3 +46,9 @@
     font-size: 16px;
   }
 }
+@media screen and (max-width: 370px) {
+  .ws-iconbox:nth-child(3) {
+    max-width: 100%;
+    height: 80px;
+  }
+}
