--- a/styles-lg.css
+++ b/styles-lg.css
@@ -255,11 +255,9 @@
   .workshop-include-section {
     padding: 20px 19px 24px 19px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: start;
   }
-  .workshop-included-br {
-    display: block;
-  }
+  
   .benefits {
     padding: 0px;
     background-color: transparent;
