--- a/styles.css
+++ b/styles.css
@@ -2619,7 +2619,8 @@ picture:hover img {
   color: #4a4a4a;
   font-size: 32px;
   font-weight: 700;
-  line-height: 35px; /* 109.375% */
+  line-height: 35px;
+  text-align: center;
 }
 
 .session-counter-hero > h3 {
