--- a/styles-lg.css
+++ b/styles-lg.css
@@ -19,14 +19,15 @@
   .uhc-mobile {
     display: block;
     width: 100%;
+    /* height: 78px; */
     position: fixed;
-    bottom: 14px;
+    bottom: 0;
     background-color: #f2e3c4;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 11px 24px;
-    /* border-radius: 12px 12px 0px 0px; */
+    padding: 11px 24px 22px;
+    border-radius: 12px 12px 0px 0px;
     transition: all 0.3s ease-in-out;
   }
 
@@ -201,7 +202,7 @@
     width: 100%;
     /* height: 100%; */
     /* width: calc(100vw - 40px); */
-    /* height: 231px; */
+    height: 482px;
     border-radius: 13px;
     overflow: hidden;
   }
@@ -324,7 +325,7 @@
     padding: 28px;
   }
   .register-form-bottom {
-    margin-top: 34px;
+    margin-top: 24px;
   }
   /* .footer-bottom {
     margin-bottom: 100px;
